--- a/style7.css
+++ b/style7.css
@@ -411,6 +411,8 @@ box-shadow: 0 8px 24px -1px #31a9cc;
 } 
 .section-middle .section-airpad-top img{
    border-radius: 100%;
+   border: 2px solid #31a9cc;
+   box-shadow: 0 2px 8px 0;
    width: 250px;
    height: 250px;
    -webkit-border-radius: 100%;
@@ -570,6 +572,8 @@ box-shadow: 0 8px 24px -1px #31a9cc;
 } 
 .section-middle .section-watch-top img{
    border-radius: 100%;
+   border: 2px solid #31a9cc;
+   box-shadow: 0 2px 8px 0;
    width: 250px;
    height: 250px;
    -webkit-border-radius: 100%;
