--- a/style4.css
+++ b/style4.css
@@ -72,21 +72,24 @@ img{
 }
 
 .section-nav{
-    display: grid;
-   grid-template-columns:50% 50% ;
-   justify-content: space-between;
-    margin:0% auto;
-    width: 100%;
-    max-width: 1300px;
-    padding: 1rem;
-    height: 100%;
-    align-items: center;
-    box-shadow:0 2px 8px 0 rgba(99,99,99,0.2);
-     margin-top: 1rem;
-    
+        display: grid;
+        grid-template-columns:50% 50% ;
+        justify-content: space-between;
+        margin:0% auto;
+        width: 100%;
+        max-width: 1300px;
+        padding: 1rem;
+        height: 100%;
+        align-items: center;
+        box-shadow:0 2px 8px 0 rgba(99,99,99,0.2);
+        margin-top: 1rem;
         border-radius:12px ;
-    background-color: rgba(255,255,255,0.1);
-    backdrop-filter: blur(22px);
+        background-color: rgba(255,255,255,0.1);
+        backdrop-filter: blur(22px);
+        -webkit-border-radius:12px ;
+        -moz-border-radius:12px ;
+        -ms-border-radius:12px ;
+        -o-border-radius:12px ;
 }
 nav li:not(:last-child) a:hover{
 
