--- a/CART/login.css
+++ b/CART/login.css
@@ -30,7 +30,7 @@ main {
   justify-content: center;
   align-items: center;
   margin: auto;
-  background-color: bisque;
+  background-color:white;
 }
 .title-div {
   margin-block: 1rem;
