--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -27,13 +27,13 @@
     </label>
      <ul class="list-nav-mobile">
 
-    <li> <a href="test4-contactUs.html">ارتباط باما</a></li>
+    <li> <a href="{% url 'contact' %}">ارتباط باما</a></li>
 
     <li><a href="#">حساب کاربری</a></li>
 
     <li><a href="#">فروشگاه</a></li>
 
-    <li><a href="#">صفحه اصلی</a></li>
+    <li><a href="{% url 'home' %}">صفحه اصلی</a></li>
 
     <li>
         <a href="test3-Login.html" class="active">
@@ -58,7 +58,7 @@
 <div class="left-nav-link">
 
     <li>
-        <a href="test4-contactUs.html">ارتباط باما</a>
+        <a href="{% url 'contact' %}">ارتباط باما</a>
 
     </li>
 
@@ -71,7 +71,7 @@
     </li>
 
     <li>
-        <a href="#">صفحه اصلی</a>
+        <a href="{% url  'home' %}">صفحه اصلی</a>
     </li>
 
 </div>
