added shop page and named it products

--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -31,7 +31,7 @@
 
     <li><a href="#">حساب کاربری</a></li>
 
-    <li><a href="#">فروشگاه</a></li>
+    <li><a href="{% url 'products' %}">فروشگاه</a></li>
 
     <li><a href="{% url 'home' %}">صفحه اصلی</a></li>
 
@@ -67,7 +67,7 @@
     </li>
 
     <li>
-        <a href="#">فروشگاه</a>
+        <a href="{% url 'products' %}">فروشگاه</a>
     </li>
 
     <li>
